2005-07-05  Edward Hervey  <edward@fluendo.com>

	* bin/pitivi.in:
	* configure.ac:
	Use PYTHONDIR
	
	* pitivi/bin.py:
	cleanup
	
	* pitivi/settings.py:
	added __str__()
	
	* pitivi/ui/exportsettingswidget.py:
	* pitivi/ui/viewer.py:
	Reuse the project settings :)

2005-06-30  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/viewer.py: (PitiviViewer._create_sinkthreads): 
	Audio and Video sinks are now selected by GConf GNome media selector
	keys.

2005-06-28  Thomas Vander Stichele <thomas@apestaart.org>

	Reviewed by Edward Hervey <edward@fluendo.com>

	* Makefile.am:
	* bin/pitivi.in:
	* pitivi/Makefile.am:
	* pitivi/ui/Makefile.am:
	installation fixes

2005-06-24  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	* RELEASE
	0.1.10 release :)
	
2005-06-24  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	0.1.9.2 pre-release !

	* pitivi/project.py:
	* configure.ac:
	* pitivi.spec.in:
	Bumped required gnome-python version to 2.10.0
	Now using gnomevfs instead of gnome.vfs

	* pitivi/ui/Makefile.am: (ui_PYTHON): 
	typo

2005-06-23  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/Makefile.am:
	* pitivi/Makefile.am:
	Added new files to be installed

	* pitivi/ui/viewer.py: (EncodingDialog): 
	* pitivi/ui/encodingdialog.glade:
	Added settings in Encoding Dialog

	* pitivi/ui/viewer.py:
	Added audioconvert in the Audio Sink Thread

	* pitivi/ui/projectsettings.py:
	* pitivi/ui/projectsettings.glade:
	* pitivi/ui/gstwidget.py:
	* pitivi/ui/elementsettingsdialog.glade:
	* pitivi/ui/exportsettingswidget.py:
	* pitivi/ui/exportsettingswidget.glade:
	Split up Settings Dialogs in smaller widgets

	* pitivi/ui/glade.py:
	Wrapper for the run() dialog method

	* pitivi/bin.py:
	SmartBin are no longer gst.Thread but gst.Bin
	Added support for element properties in timeline encoding thread

	* pitivi/objectfactory.py: (FileSourceFactory):
	Added support for 'pixel-aspect-ratio'

	* pitivi/playground.py:
	Removed useless state_change()

	* pitivi/project.py: